# react-native-ad-manager

./: LICENSE  README.md  package.json  react-native-ad-manager.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/java/com/reactnativeadmanager/: AdManagerModule.java  AdManagerPackage.java
cpp/: react-native-ad-manager.cpp  react-native-ad-manager.h
example/: package.json
example/android/: gradle.properties
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/reactnativeadmanager/: MainApplication.java
example/ios/: Podfile
example/ios/AdManagerExample/: AppDelegate.m
example/ios/AdManagerExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: AdManager.h  AdManager.mm
ios/AdManager.xcodeproj/: project.pbxproj
src/: index.tsx
